Ported to 26.2 (loads of rendering bugs for Laptop UI)